// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test total expense component with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $9.99
  </h1>
</div>
`;

exports[`test total expense component with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totaling 
    $34,784,090,238.58
  </h1>
</div>
`;
